Fixed icon spacing

--- a/css/custom.css
+++ b/css/custom.css
@@ -601,7 +601,7 @@ span.input-group-btn button.btn {
 
 .panel-icon {
     position: absolute;
-    left: -45px;
+    left: -47px;
     top: 2px;
     color: white;
     font-size: 34px;
